# gps360-viewer

./: .gitignore  LICENSE  README.md  aibzy-1qsp1.icns  launch_gps360_gui.command  pyproject.toml
gps360/: __init__.py  app.py  driver.py  nmea.py  pl2303.py  sirf_probe.py  usb_bridge.py  web_app.py
macos/: GPS360Viewer.swift
scripts/: build_macos_app.sh  package_release.sh
